# libmbot

./: CMakeLists.txt  LICENSE  README.md  config.cmake.in  package.xml  suppressions.txt
.github/workflows/: cmake-single-platform.yml  cmake-ubuntu-22.04.yml  cmake-ubuntu-latest.yml  cppcheck.yml
cmake/: FindAsio.cmake
examples/: auriga_board.cpp  battery_power.cpp  read_motor_sensors.cpp
include/: boards.hpp  comm.hpp  devices.hpp  operations.hpp
src/: boards.hpp  comm.cpp  comm.hpp  devices.hpp  main.cpp  operations.cpp  operations.hpp
