<?xml version="1.0"?>
<package format="3">
  <name>libmbot</name>
  <version>0.1.0</version>
  <description>C++ library for interfacing with mbot robots</description>

  <maintainer email="jtkornel@yahoo.no">Jan Tore Korneliussen</maintainer>

  <license>BSD</license>

  <author email="jtkornel@yahoo.no">Jan Tore Korneliussen</author>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>asio</depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>