<?xml version="1.0"?>
<package format="3">
  <name>libmbot</name>
  <version>0.1.0</version>
  <description>C++ library for interfacing with mbot robots</description>

  <maintainer email="jtkornel@yahoo.no">Jan Tore Korneliussen</maintainer>

  <license>BSD</license>

  <author email="jtkornel@yahoo.no">Jan Tore Korneliussen</author>


  <depend>serial</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>